# amaranth-axi

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: main.yml
amaranth_axi/: adaptors.py  axiaddr.py  axibus.py  axitools.py  demoaxi.py  utils.py
amaranth_wb2axip/: demoaxi.py
tests/: test_adaptors.py  test_axiaddr.py  test_synth.py  test_tools.py  test_tools_axi.py
