[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "amaranth-axi"
dynamic = ["version"]
readme = "README.md"
description = "Amaranth support for AXI bus"
dependencies = [
    "amaranth ~= 0.5.0",
    "transactron ~= 0.6.0",
]
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
]
authors = [
  {name = "Yichao Yu", email = "yyc1992@gmail.com"},
]

[project.urls]
"Source Code" = "https://github.com/yuyichao/amaranth-axi"

[project.optional-dependencies]
dev = [
    # Testing
    "pytest >= 8.0.0",
    "pytest-xdist >= 3.5.0",
    "hypothesis >= 6.99.6",
]

[tool.setuptools]
packages = ["amaranth_axi"]

[tool.setuptools.package-data]
amaranth_axi = ['rtl/*']

[tool.setuptools_scm]
