[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "amaranth-axi"
dynamic = ["version"]
readme = "README.md"
description = "Amaranth support for AXI bus"
license = "BSD-2-Clause"
license-files = ["LICENSE.txt"]
dependencies = [
    "amaranth ~= 0.5.0",
    "transactron ~= 0.6.1",
]
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
]
authors = [
  {name = "Yichao Yu", email = "yyc1992@gmail.com"},
]

[project.urls]
"Source Code" = "https://github.com/yuyichao/amaranth-axi"

[project.optional-dependencies]
dev = [
    # Testing
    "pytest >= 8.0.0",
    "pytest-xdist >= 3.5.0",
    "hypothesis >= 6.99.6",
]

[tool.hatch.build.targets.wheel]
packages = ["amaranth_axi"]
sources = { "thirdparty/wb2axip/rtl" = "amaranth_axi/rtl" }

[tool.hatch.version]
source = "vcs"
